...
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:listitem="@layout/dropdown_item_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tin_section_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundMode="filled"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/ed_max_length_section_name"
...
            style="@style/Widget.LyricCast.Button.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/button_background"
            android:text="@string/song_editor_button_delete_section"
            app:layout_constraintBottom_toTopOf="@+id/tbl_song_section"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_move_section_right"
            style="@style/Widget.LyricCast.Button.Icon.Light"
...
