...

    <!-- Setlist Controls -->
    <string name="setlist_controls_song_item_title_template" translatable="false">%d. %s</string>

    <!-- Editors -->
    <string name="editor_button_save">Save</string>
    <string name="editor_button_add">Add</string>

    <!-- Category Manager -->
    <string name="category_manager_hint_category_name">Name</string>
    <string name="category_manager_hint_category_color">Color</string>
    <string name="category_manager_add_category">Add category</string>
    <string name="category_manager_edit_category">Edit category</string>
...
