...
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navh_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/tbl_main_fragments"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph_main" />

    <!-- TODO: Make the tab layout works similar to YouTube's one -->
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:animateLayoutChanges="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/fab_add"
        app:layout_constraintEnd_toEndOf="@+id/fab_add">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
...
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:paddingBottom="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/LinearLayout2"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/main_activity_button_add_setlist"
                android:textColor="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_setlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@string/main_activity_button_add_setlist"
                android:visibility="visible"
                app:backgroundTint="@color/fab_background_secondary"
...
