/*
 * Created by Tomasz Kiljanczyk on 14/05/2021, 00:06
 * Copyright (c) 2021 . All rights reserved.
 * Last modified 13/05/2021, 10:20
 */

package pl.gunock.lyriccast.tests.main_activity

import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.replaceText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry.getInstrumentation
import io.realm.RealmList
import org.hamcrest.Matchers.allOf
import org.hamcrest.core.IsNot.not
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import pl.gunock.lyriccast.R
import pl.gunock.lyriccast.activities.MainActivity
import pl.gunock.lyriccast.datamodel.DatabaseViewModel
import pl.gunock.lyriccast.datamodel.documents.CategoryDocument
import pl.gunock.lyriccast.datamodel.documents.SongDocument
import java.lang.Thread.sleep


@RunWith(AndroidJUnit4::class)
class FilterSongsTest {

    private companion object {
        val category = CategoryDocument("TEST CATEGORY", -65536)

        const val songTitle = "FilterSongsTest 1"
        val song1 =
            SongDocument("$songTitle 1", RealmList(), RealmList(), category = category)
        val song2 = SongDocument("$songTitle 2", RealmList(), RealmList())
        val song3 = SongDocument("FilterSongsTest 2", RealmList(), RealmList())
    }

    @get:Rule
    var activityRule = ActivityScenarioRule(MainActivity::class.java)

    @Before
    fun setUp() {
        getInstrumentation().runOnMainSync {
            val databaseViewModel = DatabaseViewModel.Factory(
                getInstrumentation().context.resources
            ).create()

            databaseViewModel.clearDatabase()

            databaseViewModel.upsertCategory(category)
            databaseViewModel.upsertSong(song1)
            databaseViewModel.upsertSong(song2)
            databaseViewModel.upsertSong(song3)
        }
    }

    @Test
    fun songsAreFilteredByTitle() {
        onView(withId(R.id.rcv_songs))
            .check(matches(hasDescendant(withText(song1.title))))
            .check(matches(hasDescendant(withText(song2.title))))
            .check(matches(hasDescendant(withText(song3.title))))

        onView(withId(R.id.ed_song_filter)).perform(replaceText(songTitle))
        sleep(200)

        onView(withId(R.id.rcv_songs))
            .check(matches(hasDescendant(withText(song1.title))))
            .check(matches(hasDescendant(withText(song2.title))))
            .check(matches(not(hasDescendant(withText(song3.title)))))
    }

    @Test
    fun songsAreFilteredByCategory() {
        onView(withId(R.id.rcv_songs))
            .check(matches(hasDescendant(withText(song1.title))))
            .check(matches(hasDescendant(withText(song2.title))))
            .check(matches(hasDescendant(withText(song3.title))))

        onView(withId(R.id.spn_category)).perform(click())
        onView(allOf(withId(R.id.tv_spinner_color_name), withText(category.name))).perform(click())
        sleep(200)

        val allOfMatcher = allOf(
            hasDescendant(withText(song1.title)),
            hasDescendant(withText(category.name))
        )
        onView(withId(R.id.rcv_songs)).check(matches(hasDescendant(allOfMatcher)))
    }

}